--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cfgv==3.4.0
 dill==0.3.8
 distlib==0.3.8
 Django==5.0.7
+django-environ==0.11.2
 djangorestframework==3.15.2
 drf-yasg==1.21.7
 filelock==3.15.4
@@ -16,6 +17,7 @@ nodeenv==1.9.1
 packaging==24.1
 platformdirs==4.2.2
 pre-commit==3.7.1
+psycopg2==2.9.9
 pycodestyle==2.12.0
 pylint==3.2.5
 pytz==2024.1
