--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ cfgv==3.4.0
 dill==0.3.8
 distlib==0.3.8
 Django==5.0.7
+django-allauth==0.63.6
 django-environ==0.11.2
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 filelock==3.15.4
 identify==2.6.0
@@ -19,6 +21,7 @@ platformdirs==4.2.2
 pre-commit==3.7.1
 psycopg2==2.9.9
 pycodestyle==2.12.0
+PyJWT==2.8.0
 pylint==3.2.5
 pytz==2024.1
 PyYAML==6.0.1
