chore: github action 테스트 코드 삽입

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/webloom:latest
 
+    - name: test ls
+      run: |
+        ls -al
+
     - name: Deploy Django
       uses: appleboy/ssh-action@v1.0.3
       with:
