--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 filelock==3.15.4
+gunicorn==22.0.0
 identify==2.6.0
 inflection==0.5.1
 isort==5.13.2
