chore: discord webhook 배포 알림 스크립트 작성

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,9 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
           /home/galaxy4276/script/webloom/server.sh
+
+    - name: Discord Webhook Action
+      uses: tsickert/discord-webhook@v6.0.0
+      with:
+        webhook-url: ${{ secrets.WEBHOOK_URL }}
+        raw-data: deploy.json
