--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,13 @@ jobs:
       uses: tsickert/discord-webhook@v6.0.0
       with:
         webhook-url: ${{ secrets.WEBHOOK_URL }}
-        raw-data: ./deploy.json
+        content: |
+          {
+            "content": "백엔드 애플리케이션의 최신 내용이 배포되었습니다.",
+            "embeds": [
+              {
+                "title": "Django API 서버 배포 완료",
+                "description": "${{ github.event.head_commit.message }}"
+              }
+            ]
+          }
