--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 astroid==3.2.2
 autopep8==2.3.1
+certifi==2024.7.4
 cfgv==3.4.0
+charset-normalizer==3.3.2
 dill==0.3.8
 distlib==0.3.8
 Django==5.0.7
@@ -13,6 +15,7 @@ drf-yasg==1.21.7
 filelock==3.15.4
 gunicorn==22.0.0
 identify==2.6.0
+idna==3.7
 inflection==0.5.1
 isort==5.13.2
 mccabe==0.7.0
@@ -26,8 +29,10 @@ PyJWT==2.8.0
 pylint==3.2.5
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.32.3
 setuptools==70.3.0
 sqlparse==0.5.0
 tomlkit==0.13.0
 uritemplate==4.1.1
+urllib3==2.2.2
 virtualenv==20.26.3
