--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ anyio==4.4.0
 asgiref==3.8.1
 astroid==3.2.2
 autopep8==2.3.1
+boto3==1.34.148
+botocore==1.34.148
 certifi==2024.7.4
 cfgv==3.4.0
 charset-normalizer==3.3.2
@@ -24,6 +26,7 @@ identify==2.6.0
 idna==3.7
 inflection==0.5.1
 isort==5.13.2
+jmespath==1.0.1
 mccabe==0.7.0
 nodeenv==1.9.1
 openai==1.36.1
@@ -36,10 +39,13 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 PyJWT==2.8.0
 pylint==3.2.5
+python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
+s3transfer==0.10.2
 setuptools==70.3.0
+six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.0
 tomlkit==0.13.0
