--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ distlib==0.3.8
 distro==1.9.0
 Django==5.0.7
 django-allauth==0.63.6
+django-cors-headers==4.4.0
 django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
